@@ -1,0 +1,10 @@
+E-statistics (energy) tests and statistics for multivariate and
+univariate inference, including distance correlation, one-sample,
+two-sample, and multi-sample tests for comparing multivariate
+distributions, are implemented. Measuring and testing multivariate
+independence based on distance correlation, partial distance
+correlation, multivariate goodness-of-fit tests, k-groups and
+hierarchical clustering based on energy distance, testing for
+multivariate normality, distance components (disco) for non-parametric
+analysis of structured data, and other energy statistics/methods are
+implemented.
