@@ -1,0 +1,15 @@
+# $NetBSD: Makefile,v 1.1 2019/08/09 15:42:02 brook Exp $
+
+R_PKGNAME=	energy
+R_PKGVER=	1.7-6
+CATEGORIES=	math
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+COMMENT=	E-statistics: multivariate inference via the energy of data
+LICENSE=	gnu-gpl-v2 OR gnu-gpl-v3
+
+USE_LANGUAGES=	c c++
+
+.include "../../math/R/Makefile.extension"
+.include "../../devel/R-Rcpp/buildlink3.mk"
+.include "../../mk/bsd.pkg.mk"
