@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/08/09 15:42:02 brook Exp $
+
+SHA1 (R/energy_1.7-6.tar.gz) = f2e1e98d22babf8c0d36d0379c4c351696e2a16e
+RMD160 (R/energy_1.7-6.tar.gz) = 05f356fa9945fe4b9c7faa72c9ba99ce7ad687d0
+SHA512 (R/energy_1.7-6.tar.gz) = bda51409815dea02931b7bba150f9a3c35f496e56d8034b82a510ce6306beb7a272a045ca6991f06edea1647523ba307f1686b51fe3b4600a12a92f70653a6a6
+Size (R/energy_1.7-6.tar.gz) = 55158 bytes
